RR.SEBRAE.CLUSTER/consulta-jucerr-homolog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consulta-jucerr
  namespace: consulta-jucerr-homolog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consulta-jucerr
  template:
    metadata:
      labels:
        app: consulta-jucerr
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: consulta-jucerr
          image: harbor.rr.sebrae.com.br/consulta-juce-rr-homolog/consulta-juce-rr:v1.0.53
          ports:
            - containerPort: 80
          volumeMounts:
            - name: laravel-env-volume
              mountPath: /var/www/html/.env
              subPath: .env
      volumes:
        - name: laravel-env-volume
          configMap:
            name: laravel-staging-env
