RR.SEBRAE.CLUSTER/consulta-jucerr-homolog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consulta-jucerr-service
  namespace: consulta-jucerr-homolog
spec:
  type: LoadBalancer
  selector:
    app: consulta-jucerr
  ports:
    - name: http
      port: 80
      targetPort: 80
